2003-09-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* gettextize initial modifications
	* configure.in Makefile.in aclocal.m4 config.h.in: 
		update to support NLS
	* ABOUT-NLS: added
	* config.rpath: added
	* mkinstalldirs: added
	* intl/: added
	* po/: added
	* fm.h: NLS support
	* main.c (main): add gettext trigger

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* more autoconfisicate

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* merge m17n patch (w3m-0.4.1-m17n-20030308.patch.gz)
	* add libwc

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.4.2
	* version.c.in: update
	* doc/README: version 0.4.2, release date
	* doc-jp/README: ditto
	* NEWS: update

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03967] Re: IPv4/IPv6 only option patch
	* NEWS: options: -4, -6
	* fm.h (DNS_ORDER_INET_ONLY): added
		(DNS_ORDER_INET6_ONLY): added
		(ai_family_order_table): [3]->[7]
	* main.c (fusage): add -4/-6
		(main): -4/-6 mapped to dns_order=4/dns_order=6
	* rc.c (dnsorders): add DNS_ORDER_INET_ONLY, DNS_ORDER_INET6_ONLY
	* url.c (dnsorders): add 3-6

2003-09-16  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03960] 
	* acinclude.m4 (AC_W3M_CHECK_VER): fix version check logic

2003-08-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03958] w3mimgdisplay on jfbterm
	* w3mimg/fb/fb_w3mimg.c (w3mimg_fbopen): check TERM=jfbterm

2003-08-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03957] Location: from local-CGI
	* file.c (loadGeneralFile): don't parse header for local file
		redirected by Location: from local-CGI

2003-08-12  TSUCHIYA Masatoshi <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* [w3m-dev 03950] rel attribute of anchor tag
	* html.c (ALST_A): add ATTR_REL
		(MAXA_A): +1

2003-07-27  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03945] Re: application/xhtml+xml support
	* Makefile.in (ETC_DIR): added
		(CONF_DIR): added