@@ -1,5 +1,12 @@
 2003-09-24  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* based on [w3m-dev 03970]
+	  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
+	* acinclude.m4 (AC_W3M_IMAGE): add IMGTARGETS
+	* w3mimg/Makefile.in (all): use @IMGTARGETS@
+
+2003-09-24  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* gettextize initial modifications
 	* configure.in Makefile.in aclocal.m4 config.h.in: 
 		update to support NLS
@@ -8051,4 +8058,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.866 2003/09/23 18:42:24 ukai Exp $
+$Id: ChangeLog,v 1.867 2003/09/24 14:05:06 ukai Exp $
